--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,6 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:3.0.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.0'
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '2.0-M2-groovy-3.0'
 }
